<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.itson.macondo.fragments.AgregarLugarFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nombre"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:text="@string/str_nombre"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/et_nombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:capitalize="words" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_direccion"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center|right"
                        android:text="@string/str_direccion"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/et_direccion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:lines="3"
                        android:capitalize="sentences" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_referencias"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:text="@string/str_referencias"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/et_referencias"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:capitalize="words" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_caracteristicas"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:text="@string/str_caracteristicas"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/et_caracteristicas"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:capitalize="words" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:text="@string/str_latitud"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/txt_latitud"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="125dp"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:text="@string/str_longitud"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/txt_longitud"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:enabled="false"
                        android:focusable="false"
                        android:singleLine="true" />
                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/imgBtn_tomar_foto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_primary"
                android:padding="20dp"
                android:src="@drawable/ic_camera_alt_white_36dp" />

            <ImageView
                android:id="@+id/imgLugar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxHeight="400dp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="30dp">

                <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="100dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imgBtn_save_lugar"
        android:layout_width="@dimen/fab_button_diameter"
        android:layout_height="@dimen/fab_button_diameter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
        android:layout_marginRight="@dimen/fab_button_margin_right"
        android:background="@drawable/fab"
        android:src="@drawable/ic_done_white_36dp"
        android:tint="@android:color/white" />
</FrameLayout>
